Fixed bug #36749 (SOAP: 'Error Fetching http body' when using HTTP Proxy)